--- a/pkg/lib/page.css
+++ b/pkg/lib/page.css
@@ -74,7 +74,7 @@ a.disabled:hover {
     top: 0px;
     height: 100%;
     width: 100%;
-    position: fixed;
+    position: inherit;
 }
 
 .panel .well {
