#7106: Containers curtain fixed

--- a/pkg/docker/docker.css
+++ b/pkg/docker/docker.css
@@ -611,3 +611,7 @@ table.drive-list td:nth-child(2) img {
     padding-left: 20px;
     padding-right: 20px;
 }
+
+#curtain {
+    position: fixed;
+}
