wip - sigs on details page

--- a/pkg/kubernetes/views/image-page.html
+++ b/pkg/kubernetes/views/image-page.html
@@ -33,4 +33,10 @@
         <registry-image-layers image="image" layers="layers">
         </registry-image-layers>
     </div>
+
+    <h3 translate>Signatures</h3>
+    <div class="listing-ct-body">
+        <registry-image-signatures image="image">
+        </registry-image-signatures>
+    </div>
 </div>
