--- a/pkg/kubernetes/views/images-page.html
+++ b/pkg/kubernetes/views/images-page.html
@@ -17,7 +17,7 @@
 
 <registry-imagestream-listing imagestreams="imagestreams" tags-for-image="tagsForImage"
                               settings="settings" shared-images="sharedImages"
-                              actions="actions" image-tag-names="imageTagNames">
+                              actions="actions" image-tag-names="imageTagNames" image-by-tag="imageByTag">
 </registry-imagestream-listing>
 
 </div>
