machines: Added memory detail modal window

--- a/pkg/machines/machines.less
+++ b/pkg/machines/machines.less
@@ -217,3 +217,41 @@
 .machines-status-alert {
     padding-right: 5px;
 }
+
+.memory-devices-column > .memory-devices-list {
+    height: 70%;
+    max-height: 100%;
+    overflow: auto;
+}
+
+.memory-device-item {
+    border-bottom: solid 1px;
+    border-top: solid 1px;
+    display: flex;
+}
+
+.memory-detail-modal-table {
+    width: 100%;
+    height: 200px;
+}
+
+.memory-device-item-body {
+    flex-grow: 1;
+}
+
+.memory-device-item .btn {
+    height: 100%;
+}
+
+.bytes-field-block {
+    display: flex;
+}
+
+.bytes-field-block input {
+    width: 60%;
+    display: inline-block;
+}
+
+div.bytes-field-block div.btn-group.bootstrap-select.dropdown {
+    width: 40%;
+}
