shell: constrain mobile top-level nav buttons to 33% width max

--- a/pkg/shell/switcher.less
+++ b/pkg/shell/switcher.less
@@ -487,6 +487,7 @@
         max-width: 100%;
         overflow: hidden;
         overflow-x: auto;
+        background: linear-gradient(to bottom, #030303, #292e34 1px);
 
         ul, li {
             padding: 0;
@@ -510,6 +511,7 @@
             margin: 0 !important;
             padding: 0 !important;
             position: static;
+            max-width: 33vw;
 
             a {
                 display: inline-block !important;
